packages/ducktools-classbuilder/ducktools_classbuilder-0.9.1.tar.gz/ducktools_classbuilder-0.9.1/tests/prefab/shared/examples/fails/creation_3.py
from ducktools.classbuilder.prefab import prefab, attribute


@prefab
class FailFactorySyntax:
    x = attribute(default_factory=list)
    y = attribute()
